@@ -14,6 +14,7 @@ MAIL FROM:<b@a>
 MAIL FROM:<c@b>
 MAIL FROM:<d@d>
 MAIL FROM:<>
+MAIL FROM:<1@2@a@a>
 EOF
 
 rm -f $tmp/rules
@@ -24,3 +25,4 @@ rm -f $tmp/rules
 250 K3^M
 250 K4^M
 250 K4^M
+250 K2^M
